--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.container{
+  display: flex;
+  flex-direction: column;
+width: 500px;
+margin: 0 auto;
+}
+.content{
+  display: flex;
+  justify-content: space-between;
+}
+.input{
+  display: flex;
+  flex-direction: column;
+  
+}
